--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon-dashboard.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MERN Authentication App</title>
+    <link rel="stylesheet" href="./src/styles/admin-output.css" />
     <script
       src="https://kit.fontawesome.com/476ec20884.js"
       crossorigin="anonymous"
